admin close log

--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -69,6 +69,12 @@
 
         </li>
 
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/admincloselog"><br><a><b>CLOSE LOG</b></a></a>
+
+        </li>
+
     </ul>
 
 
