--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -58,7 +58,7 @@
                                 <th scope="col">Log Ref</th>
                                 <th scope="col">Staff Name</th>
                                 <th scope="col">Staff-Feedback</th>
-                                <th scope="col">Artisan Status</th>
+                                <!-- <th scope="col">Artisan Status</th> -->
                                 <th scope="col">Close</th>
                               </tr>
                             </thead>
@@ -67,7 +67,7 @@
                                 <td>{{data.id}}</td>
                                 <td>{{data.description}}</td>
                                 <td>{{data.staff_feedback}}</td>
-                                <td class="status">{{data.status}}</td>
+                                <!-- <td class="status">{{data.status}}</td> -->
                                 <td><button type="button" class="logbtn " (click)="log($event,data.id)" >Log</button> </td>
                               </tr>
                             </tbody>
