--- a/src/app/admincloselog/admincloselog.component.css
+++ b/src/app/admincloselog/admincloselog.component.css
@@ -5,7 +5,7 @@
 body {
     width: 100%;
   }
-  /* Start of the navigation bar*/
+
   .header {
     height: 82px;
     background: #0c0c0c;
@@ -57,27 +57,16 @@ body {
   
   }
   
-  /*logout button*/
-  .btn-success{
-    color: white;
-    border: 2px solid white;
-    height: 40px;
-    background-color: #005596;
-  }
-  .btn-success:active{
-    border: white;
-    background-color: #005596;
-  }
-  /* End of the navigation bar*/
-  /* Start of  Everything on the side nav*/
+
+  
+
   .sideNav {
     float: left;
-   
-    box-shadow: 5px 0 2px #969292;
-    width: 335px;
-    height: 1055px;
+    width: 300px;
+    height: 200vh;
     
-  }
+    }
+    
   .breadcrumbNav {
     margin: 12% 10px;
     padding: 20px 30px;      
@@ -93,7 +82,6 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-    /* identical to box height */
     letter-spacing: 0.035em;
     text-transform: capitalize;
     color: #005596;
@@ -108,22 +96,25 @@ body {
     width: 115px;  
   }
 
-  /* End of Everything on the side nav*/
+ 
   
-  /*Disable the active link*/
   a:disabled, a[disabled] {
     color: #005596;
   }
   .anchorBorder{
     margin:0 20%;
   }
-  /*Adding a hover effect on the sidenav links*/
+  
   #hover:hover {
-    font-weight: bold;
-   
-   
-  }
-  /*Cards that show progress on top on the right content*/
+    font-weight: 700px;
+    color: rgb(6, 85, 42);
+    font-size: large;
+    margin-bottom: 24px;
+    margin-left: 10px;
+    cursor: pointer;
+    
+    }
+
   .ticket{
     border: 1px solid #ccc;
     box-shadow: 2px 2px 2px rgba(94, 93, 93, 0.993);
@@ -136,73 +127,35 @@ body {
     text-decoration: none;
     border-left: 8px solid rgb(14, 60, 90);
   }
-  /*SideNav content on the left*/
+
   .container2{
-    margin-top: 3.8%;
+    flex:1;
   }
-  /*Div for the content on the right*/
+  .container-fluid{
+    flex:1;
+  }
+ 
   .tab-content {
       float: right;
       width: 80%;
       margin-right: 0%;
     }
-    /*Footer*/
-  footer{
+   
+    footer{
       background: black;
       padding: 8px;
       color: #eee;
-      text-align: center;
-      margin-left: 0%;
-      margin-top: auto;
-      width: 100%;
-      height: 40px;
-      /* position: absolute; */
-      /* bottom: 0;
-      width: 100%; */
-    }
-    
-    
-    
-    /*Navigation*/
-  /*   
-    nav {
-      height: 72px;
-      background: #0c0c0c;
-      width: 100%;
-      margin: 0;
+      display: center;
       position: fixed;
-      font-family: 'Roboto Condensed',sans-serif;
-      font-size: 20px;
-      display: flex;
-      justify-content: space-between;
-      padding:0 16px 0 0;
-      box-sizing: border-box;
-      z-index: 100;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;
+      text-align: center;
+      margin-bottom: 0;
     }
     
-    nav a {
-      padding: 0 32px;
-      color: #eee;
-      transition: 0.4s;
-    }
     
-    nav a:hover {
-      text-decoration: none;
-      color: red;
-    }
-    
-    nav ul {
-      display: flex;
-      list-style: none;
-      justify-content: space-around;
-      align-items: center;
-      height: 100%;
-      margin: 0;
-    }
-    
-    .active {
-      color:#0e0d0d;
-    } */
+ 
   .table {
       width: 90%;
       margin: auto auto;
@@ -238,3 +191,56 @@ body {
     border: 1px solid black;
     font-weight: 500;
   }
+
+  
+  .nav-tabs {
+    position: center;
+    width: 100px;
+    height: 400px;
+    left: 2px;
+    float: left;
+    width: 100%;
+    font-family: "Times New Roman";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
+    letter-spacing: 0.035em;
+    width: 335px;
+    
+    left: -2px;
+    top: 110px;
+    
+    background: rgba(255, 255, 255, 0.8);
+   
+    }
+  
+    .nav-item{
+      padding: 8px 24px;
+      
+      transition: 0.4s;
+      font-family: 'georgia';
+      margin-bottom: 24px;
+      margin-left: 24px;
+      font-weight: bold;
+      cursor: pointer;
+      background: white;
+      border-left: 8px solid rgb(14, 60, 90);
+    }
+    
+    .nav-item:hover {
+      
+      text-decoration: none;
+      padding: 8px 0;
+      
+     
+    }
+    
+    .nav-link.active {
+      border: none;
+    }
+
+  /* //////////////////////////////////////////////////////////////////////////////////////////// */
+
+
+
