--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -6,7 +6,7 @@
                     <a>
                      
                         <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
-                            style="float: left;height: 70px;width: 225px;" routerLink="read">
+                            style="float: right;height: 70px;width: 225px;" routerLink="read">
                     </a>
                 </div>
                 <div id="menu-icon">
@@ -14,9 +14,9 @@
                 </div>
                 <ul>
                     <li>
-        
+      
                         <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                            class="dropbtn">LOGOUT</button></a>
+                                class="btn btn-success">LOGOUT</button></a>
                     </li>
                 </ul>
         
@@ -26,16 +26,25 @@
 <body>
 
     <div class="container2 d-flex justify-content-between ">
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Logs</a></li>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Close Logs</a></li>
-                    
-                        
-                </ul>
-            </nav>
-        </div>
+        <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
+
+        
+           
+         
+            <li class="nav-item" role="presentation">
+                <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                    routerLink="/adminpage"><br><a><b>CLOSE LOG</b></a></a>
+    
+            </li>
+    
+            <li class="nav-item" role="presentation">
+                <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                    routerLink="/admincloselog"><br><a><b>CLOSE LOG</b></a></a>
+    
+            </li>
+    
+        </ul>
+    
 
         <div class="tab-content ps-3 mt-5" id="myTabContent">
 
