--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -106,8 +106,6 @@
   }
   
   
-  
-  /*Footer*/
 
   footer{
     background: black;
@@ -123,47 +121,7 @@
   }
   
   
-  
-  /*Navigation*/
-/*   
-  nav {
-    height: 72px;
-    background: #0c0c0c;
-    width: 100%;
-    margin: 0;
-    position: fixed;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding:0 16px 0 0;
-    box-sizing: border-box;
-    z-index: 100;
-  }
-  
-  nav a {
-    padding: 0 32px;
-    color: #eee;
-    transition: 0.4s;
-  }
-  
-  nav a:hover {
-    text-decoration: none;
-    color: red;
-  }
-  
-  nav ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-  }
-  
-  .active {
-    color:#0e0d0d;
-  } */
+
   
   #menu-icon {
     height: 100%;
@@ -174,7 +132,7 @@
     align-items: center;
   }
   
-  /* Dropdown Button */
+
   .dropbtn {
     background-color: #04AA6D;
     color: white;
@@ -185,14 +143,14 @@
     
   }
   
-  /* The container <div> - needed to position the dropdown content */
+ 
   .dropdown {
     position: relative;
     display: inline-block;
     cursor:pointer
   }
   
-  /* Dropdown Content (Hidden by Default) */
+
   .dropdown-content {
     display: none;
     position: absolute;
@@ -202,7 +160,6 @@
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -210,13 +167,10 @@
     display: block;
   }
   
-  /* Change color of dropdown links on hover */
   .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
+
   .dropdown:hover .dropdown-content {display: block;}
   
-  /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
   
   
@@ -255,14 +209,12 @@
   }
   
   
-  /* Three image containers (use 25% for four, and 50% for two, etc) */
   .column {
     float: left;
     width: 33.33%;
     padding: 5px;
   }
   
-  /* Clear floats after image containers */
   .row::after {
     content: "";
     clear: both;
@@ -325,7 +277,7 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  /* identical to box height */
+
 
   letter-spacing: 0.035em;
   text-transform: capitalize;
@@ -454,7 +406,7 @@ a {
 .chart,
 .chart1 {
   flex: 1;
-  margin-right: 10px; /* Add margin between the sections if desired */
+  margin-right: 10px; 
 }
 
 .chart2 {
@@ -474,5 +426,6 @@ a {
 }
 
 td button {
-  margin-right: 10px; /* Adjust the value as per your preference */
+  margin-right: 10px; 
 }
+
