admin close log update

--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -33,7 +33,7 @@
          
             <li class="nav-item" role="presentation">
                 <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
-                    routerLink="/adminpage"><br><a><b>CLOSE LOG</b></a></a>
+                    routerLink="/adminpage"><br><a><b>VIEW LOG</b></a></a>
     
             </li>
     
@@ -44,6 +44,8 @@
             </li>
     
         </ul>
+
+        
     
 
         <div class="tab-content ps-3 mt-5" id="myTabContent">
