--- a/src/app/technician-table/technician-table.component.html
+++ b/src/app/technician-table/technician-table.component.html
@@ -33,11 +33,11 @@
             <li class="nav-item" role="presentation" id="doing-tab1" routerLink="/adminpage"  >
                 <a class="nav-link active colorRed" id="doing-tab"  type="text"
                     role="tab" aria-controls="doing" aria-selected="true">
-                    <br><a><b>View Logs</b></a></a>
+                    <br><a><b>VIEW LOGS</b></a></a>
             </li>
             <li class="nav-item" role="presentation" id="doing-tab2">
                 <a class="nav-link colorAmber" id="done-tab"  type="text"
-                    role="tab" aria-controls="done" aria-selected="false"><br><a><b>Technicians</b></a></a>
+                    role="tab" aria-controls="done" aria-selected="false"><br><a><b>TECHNICIANS</b></a></a>
     
             </li>
     
