--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -9,12 +9,22 @@
     <div class="sideNav">
         <nav class="breadcrumbNav">
             <ul>
-                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                        routerLink="/staffpage"><img src="../../assets/icons/request-for-proposal.png" height="35" width="35"/><b>REQUEST</b></a></li>
+                <li class="breadcrumb-item active" id="breadcrumbpadding">
+                    <a class="anchorBorder" id="hover"
+                        routerLink="/staffpage">
+                        <img src="../../assets/icons/request-for-proposal.png" height="35" width="35"/>
+                        <b>REQUEST</b>
+                    </a>
+                </li>
             </ul>
             <ul>
-                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                        disabled="true"><img src="../../assets/icons/tracking.png" height="35" width="35"/><b>TRACKING</b></a></li>
+                <li class="breadcrumb-item active" id="breadcrumbpadding">
+                    <a class="anchorBorder" id="hover"
+                        disabled="true">
+                        <img src="../../assets/icons/tracking.png" height="35" width="35"/>
+                        <b>TRACKING</b>
+                    </a>
+                </li>
             </ul>
 
             
@@ -23,10 +33,10 @@
     </div>
 
         <!-- staff request  -->
-    <div class="contentContainerRight">
-        <div class="backFrom" >
+    <div class="tab-content ps-2" id="myTabContent">
+        <!-- <div class="backFrom" >
             <h2 class="toptitle">Staff Track Request</h2>
-        </div>
+        </div> -->
 
         <!-- request stats --><div class="stats d-flex flex-wrap justify-content-between px-4">
         <form class="w-100 mb-4"> <!-- Adjust the width based on your preference -->
