--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -2,11 +2,62 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@import "~bootstrap/dist/css/bootstrap.css";
 
 
 
 /* End of the navigation bar*/
 /* Start of  Everything on the side nav*/
+.container2{
+  
+  flex:1;
+}
+.nav-tabs  {
+  position: center;
+  width: 100px;
+  height: auto;
+  left: 2px;
+  float: left;
+  width: 100%;
+  font-family: "Times New Roman";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 25px;
+  letter-spacing: 0.035em;
+  width: 335px;
+  
+  left: -2px;
+  top: 110px;
+  
+  background: rgba(255, 255, 255, 0.8);
+ 
+  }
+  .nav-item{
+    padding: 8px 24px;
+    
+    transition: 0.4s;
+    font-family: 'georgia';
+    margin-bottom: 24px;
+    margin-left: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    background: white;
+    border-left: 8px solid rgb(14, 60, 90);
+  }
+  
+  .nav-item:hover {
+    
+    text-decoration: none;
+    padding: 8px 0;
+    
+   
+  }
+  
+  .nav-link.active {
+    border: none;
+  }
+  
 .sideNav {
   float: left;
 
@@ -152,9 +203,11 @@ a {
 }
 
 .main {
+  flex: 1;
   height: calc(100vh - 70px);
   width: 75%;
   padding: 40px 30px 30px 30px;
+  padding-right: 12%;
 }
 
 .white {
@@ -167,6 +220,25 @@ a {
   align-items: center;
   flex-wrap: wrap;
   gap: 50px;
+}
+.ticket{
+  width: 80rem;
+  padding: 35px 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  
+
+}
+
+.ticket .card-body{
+padding: 20px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+background: #fff;
+border-radius: 10px;
+box-shadow: 0 7px 25px 0 rgba(0, 0, 0, 0.8)
 }
 
 .navcontainer {
@@ -226,17 +298,25 @@ a {
 }
 
 .box {
-  background-color: #005596;
+  background-color: #fff;
   height: 150px;
   width: 280px;
-  border-radius: 20px;
-  box-shadow: 3px 3px 10px rgba(0, 30, 87, 0.751);
-  padding: 20px;
+  /* border-radius: 20px;
+  box-shadow: 3px 3px 10px rgba(0, 30, 87, 0.751); */
+  /* padding: 20px; */
   display: flex;
   align-items: center;
   justify-content: space-around;
   cursor: pointer;
+  border-radius: 10px;
   transition: transform 0.3s ease-in-out;
+  box-shadow: 0 7px 25px 0 rgba(0, 0, 0, 0.8);
+  
+  padding: 35px 20px;
+  /* display: grid; */
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 50px;
+  width: 15rem; height: 8rem;
 }
 
 .box:hover {
@@ -250,7 +330,7 @@ a {
 }
 
 .box .text {
-  color: white;
+  color:black;
 }
 
 #left {
@@ -463,7 +543,11 @@ footer {
   }
 
   .main {
-    padding: 40px 30px 30px 30px;
+    /* padding: 40px 30px 30px 30px; */
+    float: right;
+    width: 1500%;
+    margin-right: 0%;
+    padding-bottom: 2.5rem;
   }
 
   .searchbar2 {
