--- a/src/app/staffpage/staffpage.component.css
+++ b/src/app/staffpage/staffpage.component.css
@@ -1,6 +1,9 @@
 
 
-
+form{
+  padding-right: 10%;
+  margin-right: 40%;
+}
 
 .tab-content {
   float: right;
@@ -91,24 +94,24 @@ input.form-control {
 
 
 .sideNav {
-float: left;
-box-shadow: 5px 0 2px #575656;
-width: 300px;
-height: 850px;
+  float: left;
+   
+  box-shadow: 5px 0 2px #969292;
+  width: 335px;
+  height: 1080px;
 
 
 }
 
 .breadcrumbNav {
-margin: 12% 10px;
-padding: 20px 30px; 
-top:0%;  
+  margin: 12% 10px;
+  padding: 20px 30px;   
     
 }
 #breadcrumbpadding {
 
-width: 115px;  
-padding: 6px 0;
+  width: 120px;  
+  padding: 6px 0;
 }
 
 a {
@@ -157,7 +160,8 @@ margin-left: 10px;
 
 cursor: pointer;
 
-
+font-weight: bold;
+   
 
 
 }
