--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -1,160 +1,153 @@
 
-<!-- <div class="">
-  
-        <div class="log d-flex justify-content-end">
-            <nav class="header">
-                <div id="logoDiv">
-                    <a>
-                        <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
-                            style="float: left;height: 70px;width: 225px;" routerLink="read">
-                    </a>
-                </div>
-                <div id="menu-icon">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <ul>
-                    <li>
-        
-                        <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                            class="dropbtn">LOGOUT</button></a>
-                    </li>
-                </ul>
-        
-            </nav>
-        </div>
-</div> -->
+
 <!-- <body> -->
-    <app-staff-navbar></app-staff-navbar>
+    <app-adminnav></app-adminnav>
  <!-- side nav -->
+ <!-- <br>
+ <br> -->
     <div class="container2 d-flex justify-content-between ">
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
-                    <li class = "breadcrumb-item active" id = "breadcrumbpadding">
-                        <a class ="anchorBorder" id="hover" href="#"   routerLink="/dash2">
-                            <img
-							src="../../assets/icons/business.png"
-							height="35"
-							width="35"
-							/><br>DASHBOARD
-                        </a>
-                    </li>
-                </ul>    
-                <ul>
-                    
-                    <li class="breadcrumb-item active" id="breadcrumbpadding">
-                        <a class ="anchorBorder" id="hover" href="#"   routerLink="/dash2">
-                            <img
-							src="../../assets/icons/log.png"
-							height="35"
-							width="35"
-							/><br>  VIEW LOGS
-                        </a>
-                    </li>
-                </ul>    
-                <ul>
-                    <li class = "breadcrumb-item active" id = "breadcrumbpadding">
-                        <a class ="anchorBorder" id="hover" href="#"   routerLink="/adminprogress">
-                            <img
-							src="../../assets/icons/cog-wheel.png"
-							height="35"
-							width="35"
-							/><br>VIEW PROGRESS
+        <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist" *ngIf="isScreenSizeLargerThanThreshold">
 
-                        </a>
-                    </li>
-                </ul>    
-                <ul>
-                    <li class = "breadcrumb-item active" id = "breadcrumbpadding">
-                        <a class ="anchorBorder" id="hover" href="#"   routerLink="/admincloselog">
-                            <img
-							src="../../assets/icons/circle.png"
-							height="35"
-							width="35"
-							/><br>CLOSE LOGS
-                        </a>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpaddingreport">
-                        <a class="anchorBorder" id="hover" href="#" routerLink="/generatereport">
-                            <img
-							src="../../assets/icons/report.png"
-							height="35"
-							width="35"
-							/><br>GENERATE REPORT
-                        </a>
-                    </li>
-                    
-                        
-                        
-                </ul>
-            </nav>
-        </div>
+			<li class="nav-item" role="presentation"   >
+				<a class="nav-link  colorRed" id="doing-tab"  type="text" role="tab" aria-controls="doing" aria-selected="true" 
+				routerLink="/dash2"><br><a>
+					<img
+					src="../../assets/icons/logs.png"
+					height="35"
+					width="35"
+					/> <b> DASHBOARD</b></a></a>
+			</li>
+			<li class="nav-item" role="presentation">
+				<a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+					routerLink="/adminprogress"><br><a>
+						<img
+					src="../../assets/icons/processing-times.png"
+					height="35"
+					width="35"
+					/>
+						
+						<b> VIEW PROGRESS</b></a></a>
+			</li>
+	
+			<!-- <li class="nav-item" role="presentation" id="doing-tab3">
+				<a class="nav-link colorAmber" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" type="text"
+					role="tab" aria-controls="progress" aria-selected="false"><br><a><b>View LOGS</b></a></a>
+	
+			</li> -->
+	
+			<li class="nav-item" role="presentation">
+				<a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+					routerLink="/generatereport"><br><a>
+						<img
+					src="../../assets/icons/reports.png"
+					height="35"
+					width="35"
+					/>
+					  <b> REPORT</b></a></a>
+	
+			</li>
+	
+			<li class="nav-item" role="presentation">
+				<a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+					routerLink="/technician-table"><br><a>
+						<img
+					src="../../assets/icons/list.png"
+					height="35"
+					width="35"
+					/>
+						<b> TABLE</b></a></a>
+	
+			</li>
+	
+			<li class="nav-item" role="presentation">
+				<a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+					routerLink="/newArtisan">
+					<br><a><img
+						src="../../assets/icons/add.png"
+						height="35"
+						width="35"
+						/><b> CREATE ARTISAN</b></a></a>
+	
+			</li>
+	
+			<li class="nav-item" role="presentation">
+				<a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+					routerLink="/admincloselog"><br><a>
+						<img
+					src="../../assets/icons/document.png"
+					height="35"
+					width="35"
+					/>
+						<b> CLOSE LOG</b></a></a>
+	
+			</li>
+	
+		</ul>
 
-        
-        <div class="tab-content ps-5 " id="myTabContent">
-            <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
+        <div class="main"> 
+            <div class="tab-content ps-5 " id="myTabContent">
+                <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
-                <div class="stats">
-              
-                </div>
-
-                <div class="content card ">
-
-                  
-                    <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Request</h1>
-                            <table class="table">
-                                <thead class="thead-dark">
-                                <tr>
-                                    <th scope="col">Ref.</th>
-                                    <th scope="col">Staff Number</th>
-                                    <th scope="col">Description</th>
-                                    <th scope="col">venue</th>
-                                    <th scope="col">Priority</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">View Available</th>
-                                    
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr *ngFor = "let me of readData">
-                                    <th scope="row">{{me.id}}</th>
-                                    <th scope="row">{{me.staff_id}}</th>
-                                    <td>{{me.description}}</td>
-                                    <td>{{me.venue}}</td>
-                                    <td>
-                                        <!-- <input type="text" placeholder="Day">
-                                        <input type="text"  placeholder="Month">
-                                        <input type="text"  placeholder="Year"> -->
-                                        <span *ngIf="!me.expected_date" class="placeholder-text">Select a date</span>
-                                        <input type="date" [id]="'datepicker-' + me.id" [placeholder]="me.expected_date ? me.expected_date : 'Select a date'"
-                                              [(ngModel)]="me.expected_date" (change)="handleDateChange($event, me.id)"/>
-                                        <!-- *ngIf="me.expected_date !== null" [placeholder]="me.expected_date" -->
-
-                                         <select id="Cater" (change)="prioritis($event, me.id)" [(ngModel)]="me.priority"  >
-                                        <option value="High">High</option>
-                                        <option value="Low">Low</option>
-                                        <option value="Medium">Medium</option> 
-                                    </select>
-                                </td>
-                                    <td>{{me.progress}}</td>
-                                    <td>{{me.req_date}}</td>
-                                    <td><button type="button" class="btnAvailableTech" (click)=viewAvailableTech(me.id)><p>Artisan</p></button></td>
-                                </tr>
-                                
-                                </tbody>
-                            </table>
-                </div>
-
+                    <div class="stats">
                 
+                    </div>
+
+                    <div class="content card ">
+
+                    
+                        <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Request</h1>
+                                <table class="table">
+                                    <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col">Ref.</th>
+                                        <th scope="col">Staff Number</th>
+                                        <th scope="col">Description</th>
+                                        <th scope="col">venue</th>
+                                        <th scope="col">Priority</th>
+                                        <th scope="col">Status</th>
+                                        <th scope="col">Date</th>
+                                        <th scope="col">View Available</th>
+                                        
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr *ngFor = "let me of readData">
+                                        <th scope="row">{{me.id}}</th>
+                                        <th scope="row">{{me.staff_id}}</th>
+                                        <td>{{me.description}}</td>
+                                        <td>{{me.venue}}</td>
+                                        <td>
+                                            <!-- <input type="text" placeholder="Day">
+                                            <input type="text"  placeholder="Month">
+                                            <input type="text"  placeholder="Year"> -->
+                                            <span *ngIf="!me.expected_date" class="placeholder-text">Select a date</span>
+                                            <input type="date" [id]="'datepicker-' + me.id" [placeholder]="me.expected_date ? me.expected_date : 'Select a date'"
+                                                [(ngModel)]="me.expected_date" (change)="handleDateChange($event, me.id)"/>
+                                            <!-- *ngIf="me.expected_date !== null" [placeholder]="me.expected_date" -->
+
+                                            <select id="Cater" (change)="prioritis($event, me.id)" [(ngModel)]="me.priority"  >
+                                            <option value="High">High</option>
+                                            <option value="Low">Low</option>
+                                            <option value="Medium">Medium</option> 
+                                        </select>
+                                    </td>
+                                        <td>{{me.progress}}</td>
+                                        <td>{{me.req_date}}</td>
+                                        <td><button type="button" class="btnAvailableTech" (click)=viewAvailableTech(me.id)><p>Artisan</p></button></td>
+                                    </tr>
+                                    
+                                    </tbody>
+                                </table>
+                    </div>
+
+                    
+
+                </div>
+            
+
+
 
             </div>
-           
-
-
-
         </div>
 
     </div>
