--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -1,169 +1,222 @@
-.header {
-  height: 82px;
-  background: #0c0c0c;
-  width: 100%;
-  margin: 0;
-  position: fixed;
-  font-family: 'Roboto Condensed',sans-serif;
-  font-size: 20px;
-  display: flex;
-  justify-content: space-between;
-  padding:0 16px 0 0;
-  box-sizing: border-box;
-  z-index: 100;
+.tab-content {
+  float: right;
+  width: 80%;
+  margin-right: 0%;
 }
-
-.header a {
-  padding: 0 32px;
-  color: #eee;
-  transition: 0.4s;
-}
-
-.header a:hover {
-  text-decoration: none;
-  color: red;
-}
-
-.header ul {
-  display: flex;
-  list-style: none;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-}
-#logoDiv{
-  margin-left: -2%;
-  margin-top: 7.2px;
-
-}
-.logo{
-  margin-left: 0%;
-}
-
-/*logout button*/
-.btn-success{
-color: white;
-border: 2px solid white;
-height: 40px;
-background-color: #005596;
-}
-.btn-success:active{
-border: white;
-background-color: #005596;
-} 
-#logoDiv{
-  margin-left: 1%;
-  margin-top: 7.2px
-}
-
-
-/* Start of  Everything on the side nav*/
-.sideNav {
+.nav-tabs  {
+  position: center;
+  width: 100px;
+  height: auto;
+  left: 2px;
   float: left;
- 
-  box-shadow: 5px 0 2px #969292;
-  width: 335px;
-  height: 1055px;
-  
-}
-.breadcrumbNav {
-  margin: 12% 10px;
-  padding: 20px 30px;      
-}
-#breadcrumbpadding {
-
-  width: 120px;  
-  padding: 6px 0;
-}
-#breadcrumbpaddingreport {
-
-  width: 150px;  
-  padding: 6px 0;
-}
-a {
-  padding-top: 20px;
+  width: 100%;
+  font-family: "Times New Roman";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  /* identical to box height */
+  font-size: 22px;
+  line-height: 25px;
   letter-spacing: 0.035em;
-  text-transform: capitalize;
-  color: #005596;
-  text-decoration: none;
-}
-.breadcrumbNav ul {
-  list-style:none ;
-  flex-direction: column;
-}
-.breadcrumb-item.active {
-  border-bottom: 3px solid #005596;
-  width: 115px;  
-}
-
-
-.container2{
-  margin-top: 3.8%;
-}
-/* End of Everything on the side nav*/
-.content{
-  border: 1px solid #ccc;
-  overflow-y: scroll;
-  height: auto; 
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  width: 85%;
-  margin: auto auto;
-}
-/*Disable the active link*/
-a:disabled, a[disabled] {
-  color: #005596;
-}
-.anchorBorder{
-  margin:0 20%;
-}
-/*Adding a hover effect on the sidenav links*/
-#hover:hover {
-  font-weight: bold;
+  width: 335px;
+  
+  left: -2px;
+  top: 110px;
+  
+  background: rgba(255, 255, 255, 0.8);
  
- 
-}
-
-.tab-content {
-    float: right;
-    width: 80%;
-    margin-right: 0%;
   }
-.reqhead1{
+  .nav-item{
+    padding: 8px 24px;
     
-    margin: 8% auto; 
+    transition: 0.4s;
+    font-family: 'georgia';
+    margin-bottom: 24px;
+    margin-left: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    background: white;
+    border-left: 8px solid rgb(14, 60, 90);
+  }
+  
+  .nav-item:hover {
+    
+    text-decoration: none;
+    padding: 8px 0;
+    
+   
+  }
+  
+  .nav-link.active {
+    border: none;
+  }
+  a {
+    padding-top: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    /* identical to box height */
+    letter-spacing: 0.035em;
+    text-transform: capitalize;
+    color: #005596;
+    text-decoration: none;
+  }
+  
 
+  
+a:disabled, a[disabled] {
+    color: #005596;
   }
   
-.searchDiv{
-  margin-top: -5% ;
-}
-table {
-    margin-left: -6% ;
+.anchorBorder{
+  
+    margin:0 20%;
   }
   
-  /*Footer*/
-  footer{
-    background: black;
-    padding: 8px;
-    color: #eee;
+#hover:hover {
+    font-weight: bold;
+  }
+
+.reqhead1{
+  
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #ECE7E7; 
+    font-weight: bold;
     text-align: center;
-    margin-left: 0%;
-    margin-top: auto;
-    width: 100%;
-    height: 40px;
-    /* position: absolute; */
-    /* bottom: 0;
-    width: 100%; */
-  }
-  
+    font-family: 'Sansation';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+    letter-spacing: 0.15em;
 
+color: #000000;
+}
+
+.reqhead2{
   
-  
-  
+  border: 2px solid rgb(255, 255, 255);
+  background-color: #ECE7E7; 
+  font-weight: bold;
+  font-family: 'Sansation';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 36px;
+  letter-spacing: 0.15em;
+
+color: #000000;
+}
+
+
+
+/*Footer*/
+
+
+
+
+
+
+
+/*Navigation*/
+
+
+
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+select{
+  margin: 0 5px;
+}
+
+select#Cater,
+input.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+ 
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin-bottom: 1rem;
+}
+
+select#Cater1,
+input.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+ 
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin-bottom: 1rem;
+}
+
+
+
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+
+
+#b12{
+  float: right;
+}
+
+
+
+
